--- a/home.html
+++ b/home.html
@@ -48,8 +48,10 @@
                     <a href="https://www.instagram.com/alkzh._/?next=%2F&hl=en" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1600"><i class="fa-brands fa-instagram"></i></a>
                 </div>
                 <div class="btn" data-aos="zoom-out" data-aos-duration="1500" data-aos-delay="1800">
-                    <button>Download CV</button>
-                </div>
+                    <a href="CV-M. Arizqy Khylmi A.pdf" download>
+                        <button>Download CV</button>
+                    </a>
+                </div>                
             </div>
             <div class="image" data-aos="zoom-in" data-aos-duration="3000">
                 <img src="image/profile.jpg" alt="">
