--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <div class="login-container">
         <h2>Login untuk Mengakses Portofolio</h2>
         <form id="loginForm" onsubmit="return validatePassword()">
-            <label for="password">pplgwajibngulik</label>
+            <label for="password">pw : pplgwajibngulik</label>
             <input type="password" id="password" placeholder="Masukkan password" required>
             <button type="submit">Login</button>
             <p id="error-message" style="color: red;"></p>
@@ -165,6 +165,8 @@
 
             return false; // Mencegah form dari submit
         }
+
+        
     </script>
 </body>
 </html>
