--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="icon" href="image/logo-removebg-preview.png" type="image/png">
     <link rel="stylesheet" href="style.css">
-    <title>Curriculum Vitae</title>
+    <title>Portofolio</title>
 </head>
 <body>
     <nav>
