--- a/Pelatihan.html
+++ b/Pelatihan.html
@@ -17,8 +17,7 @@
             </div>
             <div class="links">
                 <div class="link" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="100"><a href="home.html">Home</a></div>
-                <div class="link" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="200"><a href="about.html">About</a></div>
-                <div class="link" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="300"><a href="skills.html"">Skills</a></div>
+                <div class="link" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="300"><a href="skills.html">Skills</a></div>
                 <div class="link" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="400"><a href="project.html">Project</a></div>
                 <div class="link" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="400"><a href="Pelatihan.html">Pelatihan</a></div>
                 <div class="link" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="500"><a href="contact.html">Contact</a></div>
@@ -28,7 +27,6 @@
         <div class="dropdown">
             <div class="links">
                 <a href="home.html">Home</a>
-                <a href="about.html">About</a>
                 <a href="skills.html">Skills</a>
                 <a href="project.html">Project</a>
                 <a href="Pelatihan.html">Pelatihan</a>
@@ -37,27 +35,41 @@
             </div>
         </div>
     </nav>
-    <section>
-        <div class="main-container">
-            <div class="content">
-                <h1 data-aos="fade-left" data-aos-duration="1500" data-aos-delay="700">Hey I'm <span>M. Arizqy Khylmi</span></h1>
-                <div data-aos="fade-right" data-aos-duration="1500" data-aos-delay="900" class="typewriter">I'm a <span class="typewriter-text"></span><label for="">|</label></div>
-                <p data-aos="flip-down" data-aos-duration="1500" data-aos-delay="1100"> <H1></H1>Hello everyone,Hello, I am a student from SMK Wikrama Bogor majoring in Software and Game Development with expertise in HTML, CSS, JavaScript, PHP, Python, React.js, Laravel, and MySQL. I am active as a Web Development.</p>
-                <div class="social-links">
-                    <a data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1300"><i class="fa-brands fa-linkedin"></i></a>
-                    <a href="#" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1400"><i class="fa-brands fa-github"></i></a>
-                    <a href="#" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1500"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="#" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1600"><i class="fa-brands fa-twitter"></i></a>
-                </div>
-                <div class="btn" data-aos="zoom-out" data-aos-duration="1500" data-aos-delay="1800">
-                    <button>Download CV</button>
-                </div>
+
+    <div id="certification-section">
+        <h2 class="judol-title" data-aos="fade-down" data-aos-duration="1500">Sertifikasi dan Pelatihan</h2>
+        <div class="certification-container">
+          <div class="certification-card" data-aos="zoom-in" data-aos-duration="1000">
+            <div class="certification-image">
+              <img src="image/dicoding (1).png" alt="Web Development Certification">
             </div>
-            <div class="image" data-aos="zoom-in" data-aos-duration="3000">
-                <img src="profile.jpg" alt="">
+            <div class="certification-info">
+              <h3>Belajar Dasar Pemrograman Web</h3>
+              <p>Dicoding - 2023</p>
             </div>
+          </div>
+          <div class="certification-card" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="100">
+            <div class="certification-image">
+              <img src="image/unity.png" alt="JavaScript Mastery">
+            </div>
+            <div class="certification-info">
+              <h3>Unity Essential Pathway</h3>
+              <p>Unity - 2024</p>
+            </div>
+          </div>
+          <div class="certification-card" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="200">
+            <div class="certification-image">
+              <img src="image/digidaw.png" alt="Database Management">
+            </div>
+            <div class="certification-info">
+              <h3>Pelatihan UI/UX DESIGN</h3>
+              <p>DigiUp - 2024</p>
+            </div>
+          </div>
         </div>
-    </section>
+      </div>
+      
+
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
       AOS.init({offset:0,});
