--- a/skills.html
+++ b/skills.html
@@ -20,6 +20,7 @@
                 <!-- <div class="link" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="200"><a href="about.html">About</a></div> -->
                 <div class="link" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="300"><a href="skills.html"">Skills</a></div>
                 <div class="link" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="400"><a href="project.html">Project</a></div>
+                <div class="link" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="400"><a href="Pelatihan.html">Pelatihan</a></div>
                 <div class="link" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="500"><a href="contact.html">Contact</a></div>
             </div>
         </div>
@@ -30,6 +31,7 @@
                 <!-- <a href="about.html">About</a> -->
                 <a href="skills.html">Skills</a>
                 <a href="project.html">Project</a>
+                <a href="Pelatihan.html">Pelatihan</a>
                 <a href="contact.html">Contact</a>
                 <i class="fa-solid fa-xmark cancel" onclick="cancel()"></i>
             </div>
